--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -3,12 +3,12 @@
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DepartmentHierarchyAndReminderManagementSystem;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Email": {
-    "From": "ahmed.morsi@dsquares.com",
+    "From": "ahmed123pepe@gmail.com",
     "Smtp": {
       "Host": "smtp-mail.gmail.com",
       "Port": 587,
-      "Username": "ahmed.morsi@dsquares.com",
-      "Password": "nxnfldcohhbcunoh",
+      "Username": "ahmed123pepe@gmail.com",
+      "Password": "bdciujflzswmqvmy",
       "EnableSsl": true
     }
   },
