add last version in app

--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -5,10 +5,10 @@
   "Email": {
     "From": "ahmed123pepe@gmail.com",
     "Smtp": {
-      "Host": "smtp-mail.gmail.com",
+      "Host": "smtp.gmail.com",
       "Port": 587,
       "Username": "ahmed123pepe@gmail.com",
-      "Password": "bdciujflzswmqvmy",
+      "Password": "jlzlnfjtwgcopehh",
       "EnableSsl": true
     }
   },
